--- a/Example-Code-TL.html
+++ b/Example-Code-TL.html
@@ -1,4 +1,4 @@
-<!-- LLM-example-code-snippet.html -->
+<!-- Example-Code-TL.html -->
 <!-- The tiers in the tier list are [S, A, B, C, D, E, F]. -->
 
 <!--Start of S Tier --><!-- S-Tier Threshold: 9.0+ Reserved for methodologies demonstrating rigorously verified, scalable, and robust success in aligning ASI with complex human values under adversarial conditions, across diverse domains, and with formal guarantees against catastrophic failures like deception or power-seeking. No current approaches meet this stringent standard. -->
