--- a/Example-Code-TL.html
+++ b/Example-Code-TL.html
@@ -228,6 +228,19 @@
 				<br>Actions characterized by intent to harm safety efforts. Maximally counterproductive.
 			</p>
 		</div>
+		
+<!-- Key Changes: (Version 1)
+1.  N/A
+2.  N/A
+3.  N/A
+4.  N/A
+5.  N/A
+6.  N/A
+7.  N/A
+LLM generating this output = _insert LLM model_
+Runtime to generate output = _insert runtime in seconds_
+Approximate character length in this output = XXYYZZ
+-->
 
 	</div>
 </section>
