--- a/Example-Code-TL.html
+++ b/Example-Code-TL.html
@@ -1,7 +1,7 @@
 <!-- Example-Code-TL.html -->
 <!-- The tiers in the tier list are [S, A, B, C, D, E, F]. -->
 
-<!--Start of S Tier --><!-- S-Tier Threshold: 9.0+ Reserved for methodologies demonstrating rigorously verified, scalable, and robust success in aligning ASI with complex human values under adversarial conditions, across diverse domains, and with formal guarantees against catastrophic failures like deception or power-seeking. No current approaches meet this stringent standard. -->
+<!--Start of S Tier -->
 <section class="tier s-tier">
 	<div class="title-s-tier">
 		<h2>S</h2>
@@ -11,7 +11,7 @@
 	</div>
 </section>
 
-<!-- Start of A Tier --><!-- A-Tier Threshold: 7.50 - 8.99 -->
+<!-- Start of A Tier -->
 <section class="tier a-tier">
 	<div class="title-a-tier">
 		<h2>A</h2>
@@ -73,7 +73,7 @@
 	</div>
 </section>
 
-<!-- Start of B Tier --><!-- B-Tier Threshold: 6.25 - 7.49 -->
+<!-- Start of B Tier -->
 <section class="tier b-tier">
 	<div class="title-b-tier">
 		<h2>B</h2>
@@ -109,7 +109,7 @@
 	</div>
 </section>
 
-<!--Start of C Tier --><!-- C-Tier Threshold: 5.00 - 6.24 -->
+<!--Start of C Tier -->
 <section class="tier c-tier">
 	<div class="title-c-tier">
 		<h2>C</h2>
@@ -145,7 +145,7 @@
 	</div>
 </section>
 
-<!--Start of D Tier --><!-- D-Tier Threshold: 3.75 - 4.99 -->
+<!--Start of D Tier -->
 <section class="tier d-tier">
 	<div class="title-d-tier">
 		<h2>D</h2>
@@ -178,7 +178,7 @@
 	</div>
 </section>
 
-<!--Start of E Tier --><!-- E-Tier Threshold: < 3.75 and Ineffective/Flawed Premise --><!-- E-Tier (<3.75 & Ineffective/Flawed Premise): Approaches highly ineffective based on demonstrably flawed premises about core alignment challenges (e.g., misunderstanding orthogonality/instrumental convergence), consistently failing empirical tests, misdirecting resources, or relying on naive assumptions insufficient for AGI/ASI complexity. Neglects core difficulties acknowledged by mainstream alignment or relies on wishful thinking. -->
+<!--Start of E Tier -->
 <section class="tier e-tier">
 	<div class="title-e-tier">
 		<h2>E</h2>
@@ -205,7 +205,7 @@
 	</div>
 </section>
 
-<!--Start of F Tier --><!-- F-Tier Threshold: < 3.75 and Actively Harmful --><!-- F-Tier (<3.75 & Harmful): Approaches/ideologies actively counterproductive or harmful to ASI alignment/safety. Promoting reckless capability acceleration without commensurate safety focus or actively dismissing risks, obstructing safety research/discourse, deliberately developing/proliferating known dangerous capabilities irresponsibly, pursuing paths demonstrably increasing existential risk via gross negligence/malicious intent/extreme disregard for catastrophic consequences. Makes safe ASI significantly harder/riskier. -->
+<!--Start of F Tier -->
 <section class="tier f-tier">
 	<div class="title-f-tier">
 		<h2>F</h2>
